--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en"><!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used --><head>
+		<title>Typography and Color Options</title>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<link rel="stylesheet" href="file.css">
+	</head>
 
+	
+  <!-- The "body" is the part of your document where you include all content you want to show up in the browser -->
+	<body style="background-color: white">
+		<center><h1>Giovanni Ruiz</h1></center>
+	   <div>
+		   <div class="box2 dark_blue"> </div>
+		<div class="box1 light_blue"></div>
+		<div class="box3 green"></div>
+	   </div>
+	   <div>
+		<div class="box5 turk"></div>
+		<div class="box4 purp"></div>   
+	   </div>
+  </body
+    ></html>
