--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<center><h1>Giovanni Ruiz</h1></center>
 	   <div>
 		   <div class="box2 dark_blue"> </div>
-		<div class="box1 light_blue"></div>
+		<div class="box1 white"></div>
 		<div class="box3 green"></div>
 	   </div>
 	   <div>
