--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	   <div>
 		   <div class="box2 dark_blue"> </div>
 		<div class="box1 white"></div>
-		<div class="box3 green"></div>
+		<div class="box3 orange"></div>
 	   </div>
 	   <div>
-		<div class="box5 turk"></div>
-		<div class="box4 purp"></div>   
+		<div class="box5 purp"></div>
+		<div class="box4 red"></div>   
 	   </div>
   </body
     ></html>
