--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used --><head>
-		<title>Typography and Color Options</title>
+		<title>Gios Colors</title>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" href="laura.css">
 	</head>
