--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<body style="background-color: white">
 		<center><h1>Giovanni Ruiz</h1></center>
 	   <div>
-		   <div class="box2 dark_blue"> </div>
-		<div class="box1 blue"></div>
+		   <div class="box2 dark_green"> </div>
+		<div class="box1 green"></div>
 		<div class="box3 orange"></div>
 	   </div>
 	   <div>
-		<div class="box5 purp"></div>
-		<div class="box4 red"></div>   
+		<div class="box5 light_blue"></div>
+		<div class="box4 lighter blue"></div>   
 	   </div>
   </body
     ></html>
