--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en"><!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used --><head>
 		<title>Gios Colors</title>
@@ -10,13 +11,14 @@
 	<body style="background-color: white">
 		<center><h1>Giovanni Ruiz</h1></center>
 	   <div>
-		   <div class="box2 dark_green"> </div>
-		<div class="box1 green"></div>
-		<div class="box3 orange"></div>
+		   <div class="box2 dark_green"><p>Gio</p></div>
+		<div class="box1 green"><p>Gio</p></div>
+		<div class="box3 orange"><p>Gio</p></div>
 	   </div>
 	   <div>
-		<div class="box5 light_blue"></div>
-		<div class="box4 lighter blue"></div>   
+       <div class="box5 light_blue"><p>Gio</p></div>
+       <div class="box4 lighter blue"><p>Gio</p></div>   
 	   </div>
-  </body
-    ></html>
+	</body>
+  	</html>
+ 
