--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en"><!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used --><head>
-	<title>Gios Colors</title>
+	<title>Laura's Website</title>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" href="laura.css">
 			<link href='https://fonts.googleapis.com/css?family=Roboto:100,400,300,500,700' rel='stylesheet' type='text/css'>
