--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 
 <!DOCTYPE html>
-<html lang="en"><!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used --><head>
-	<title>Laura's Website</title>
-			<link rel="stylesheet" href="laura.css">
-			
+<!-- All HTML documents begin and end with an "html" tag -->
+<html lang="en">
+
+  <!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used -->
+	<head>
+		<title>Laura's Website</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="file.css">
 	</head>
-  	</html>
- 
+		<center><h1 class="box0">Giovanni</h1></center>
+	<body>  
+    
+    <div class="container">
+     <div class="top">
+        <div class="box1"> <h2 class="Aligner font2">Gio</h2></div>
+        <div class="box2"></div>
+        <div class="box3"><h2 class="Aligner font2">Gio</h2></div>
+     </div>
+      <div>
+        <div class="box4"> <h2 class="Aligner font2">Gio</h2></div>
+        <div class="box5"></div>
+        <div class="box6"><h2 class="Aligner font2">Gio</h2></div>
+     </div>
+   </div>
+	</body>
+   
+</html>
