--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 		<title>Laura's Website</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="file.css">
+		<link rel="stylesheet" href="laura.css">
 	</head>
 		<center><h1 class="box0">Giovanni</h1></center>
 	<body>  
