--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 	<head>
 		<title>Laura's Website</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="laura.css">
+		<link rel="stylesheet" href="file.css">
 	</head>
-		<center><h1 class="box0">Giovanni</h1></center>
+		<center><h1 class="box1">Giovanni</h1></center>
 	<body>  
     
     <div class="container">
      <div class="top">
-        <div class="box1"> <h2 class="Aligner font2">Gio</h2></div>
-        <div class="box2"></div>
-        <div class="box3"><h2 class="Aligner font2">Gio</h2></div>
+       <div class="circle1"> <h2 class="Aligner font2">Gio</h2></div>
+       <div class="box2"></div>
+       <div class="circle2"><h2 class="Aligner font2">Gio</h2></div>
      </div>
       <div>
-        <div class="box4"> <h2 class="Aligner font2">Gio</h2></div>
-        <div class="box5"></div>
-        <div class="box6"><h2 class="Aligner font2">Gio</h2></div>
+        <div class="circle3"> <h2 class="Aligner font2">Gio</h2></div>
+        <div class="box3"></div>
+        <div class="circle4"><h2 class="Aligner font2">Gio</h2></div>
      </div>
    </div>
 	</body>
