--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 
 <!DOCTYPE html>
-<!-- All HTML documents begin and end with an "html" tag -->
 <html lang="en">
-
-  <!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used -->
 	<head>
 		<title>Laura's Website</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="file.css">
+		<link rel="stylesheet" href="laura.css">
 	</head>
 		<center><h1 class="box1">Giovanni</h1></center>
 	<body>  
