--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="laura.css">
 	</head>
-		<center><h1 class="box1">Giovanni</h1></center>
+		<h1 class="box1">Giovanni</h1>
 	<body>  
     
     <div class="container">
@@ -15,7 +15,7 @@
        <div class="box2"></div>
        <div class="circle2"><h2 class="Aligner font2">Gio</h2></div>
      </div>
-      <div>
+      <div class="bottom">
         <div class="circle3"> <h2 class="Aligner font2">Gio</h2></div>
         <div class="box3"></div>
         <div class="circle4"><h2 class="Aligner font2">Gio</h2></div>
