--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="laura.css">
 	</head>
-		<h1 class="box1">Giovanni</h1>
+		<h1 class="box1">Laura Chase</h1>
 	<body>  
     
     <div class="container">
      <div class="top">
-       <div class="circle1"> <h2 class="Aligner font2">Gio</h2></div>
+       <div class="circle1"><h2 class="Aligner font2">“There's a lot of stress out there, and to handle it, you just need to believe in yourself; always go back to the person that you know you are, and don't let anybody tell you any different, because everyone's special and everyone's awesome.” -McKayla Maroney </h2></div>
        <div class="box2"></div>
-       <div class="circle2"><h2 class="Aligner font2">Gio</h2></div>
+       <div class="circle2"><h2 class="Aligner font2">“Every time we share something rather than own it ourselves, we reduce the stress on the planet. That could make the critical difference as the global population continues to grow.” -Lisa Gansky</h2></div>
      </div>
       <div class="bottom">
-        <div class="circle3"> <h2 class="Aligner font2">Gio</h2></div>
+        <div class="circle3"> <h2 class="Aligner font2">“I've chosen to treat my life more like a party than something to stress about.” -Martin Short </h2></div>
         <div class="box3"></div>
-        <div class="circle4"><h2 class="Aligner font2">Gio</h2></div>
+        <div class="circle4"><h2 class="Aligner font2">“The key to winning is poise under stress.”- Paul Brown </h2></div>
      </div>
    </div>
 	</body>
